@@ -14,8 +14,8 @@ exec_all: all run clean
 
 all: roman_numeral_project increment
 
-roman_numeral_project: main.o rmn_calc.o test_rmn_calc_regex.o
-	$(CC) main.o rmn_calc.o test_rmn_calc_regex.o -o test_exe
+roman_numeral_project: main.o rmn_calc.o test_rmn_calc_regex.o test_rmn_calc_enc_dcd.o
+	$(CC) main.o rmn_calc.o test_rmn_calc_regex.o test_rmn_calc_enc_dcd.o -o test_exe
 
 main.o: main.c
 	$(CC) $(CFLAGS) main.c
@@ -25,6 +25,9 @@ rmn_calc.o: rmn_calc.c
 	
 test_rmn_calc_regex.o: test_rmn_calc_regex.c
 	$(CC) $(CFLAGS) test_rmn_calc_regex.c
+
+test_rmn_calc_enc_dcd.o: test_rmn_calc_enc_dcd.c
+	${CC} ${CFLAGS} test_rmn_calc_enc_dcd.c
 	
 run:
 	./test_exe
