@@ -2,6 +2,8 @@
 #define COMMON_H
 
 #include <stdio.h>
+#include <string.h>
+#include <ctype.h>
 #include "rmn_calc.h"
 
 // comment out when not testing
