@@ -3,5 +3,6 @@
 
 int RMN_init(void);
 int RMN_verify_string(char *str);
+void RMN_encode_int(int n, char *str);
 
 #endif // RMN_CALC_H
