@@ -36,3 +36,6 @@
 
 -> 02/08/2017 (branch: feature_encode_int_to_roman_numeral)
 	- created a new branch in order to take an integer and create a roman numeral string
+	- renamed rmn_calc.c to test_rmn_calc.c to differentiate between different tests
+	- added test_rmn_calc_enc_dcd.c to project for encoding and decoding roman numeral strings
+	- verified encoding to 'I' for edge conditions 1 and 3
